Fixed responsiveness on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -63,40 +63,20 @@ a:active {
     margin: 2% 25%;
 }
 
-/* Phone Portrait */
-@media only screen 
-  and (min-device-width: 375px) 
-  and (max-device-width: 812px) 
-  and (orientation: portrait) { 
+/* Smartphones (portrait) ----------- */
+@media only screen and (orientation: portrait)
+and (max-width: 320px) {
     #info {
         margin: 2% 10%;
     }
 }
 
-/* Phone Landscape */
-@media only screen
-    and (min-device-width: 375px) 
-    and (max-device-width: 812px) 
-    and (orientation: landscape) { 
-        .priceBlock {
-            width: 75%;
-        }
-}
-
-/* Smartphones (portrait) ----------- */
-@media only screen and (max-width: 320px) {
-    
-}
-
 /* Smartphones (landscape) ----------- */
 @media screen and (orientation:landscape)
-and (min-device-width: 319px) 
-and (max-device-width: 480px) {
-    
-}
-
-@media only screen and (orientation: landscape) {
-    
+and (min-device-width: 320px) {
+    .priceBlock {
+        width: 75%;
+    }
 }
 
 /* Desktops and laptops ----------- */
